# RusticSoup

./: CHANGELOG.md  Cargo.toml  README.md  build_docker_wheels.sh  pyproject.toml
examples/: basic_usage.py
src/: bulk_parser.rs  encoding.rs  lib.rs  scraper.rs  universal_extractor.rs
tests/: test_bench_macro.py  test_smoke.py
